# FastAPI-scaffold

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  extract_races.py  pyproject.toml
app/: __init__.py  config.py  main.py  routes.py
app/handlers/: health.py
tests/: __init__.py
