[project]
name = "horse-race-api"
version = "1.0.0"
description = "API for processing horse racing PDFs into CSV format"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "supabase==2.10.0",
    "celery==5.4.0",
    "redis==5.2.0",
    "python-dotenv==1.0.1",
    "pdfplumber>=0.11.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    "extract_races.py",
    "test_extract_races.py",
    "test_comparison.py",
    "data/",
    "outputs/",
    "__pycache__/",
    ".venv/",
    ".git/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]
